--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "lint": "./node_modules/.bin/eslint --ext .js,.jsx --ignore-pattern public .",
     "test": "echo \"Error: no test specified\" && exit 1",
     "develop": "gatsby develop",
+    "start": "gatsby serve",
     "build": "gatsby build",
     "heroku-postbuild": "gatsby build",
     "deploy": "gatsby build --prefix-paths && gh-pages -d public",
