--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "version": "1.0.0",
   "author": "Jordan",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.0-14",
+    "@fortawesome/free-solid-svg-icons": "^5.1.0-11",
+    "@fortawesome/react-fontawesome": "0.1.0-11",
     "gatsby": "^1.9.235",
-    "gatsby-link": "^1.6.39",
     "gatsby-image": "^1.0.42",
+    "gatsby-link": "^1.6.39",
     "gatsby-plugin-google-analytics": "^1.0.24",
     "gatsby-plugin-react-helmet": "^1.0.8",
     "gatsby-plugin-sass": "^1.0.23",
@@ -16,7 +19,8 @@
     "gatsby-source-filesystem": "^1.5.27",
     "gatsby-transformer-remark": "^1.7.37",
     "gatsby-transformer-sharp": "^1.6.22",
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.4",
+    "react-scroll-up": "^1.3.3"
   },
   "homepage": "https://github.com/ChangoMan/gatsby-starter-dimension",
   "keywords": [
